[tool.poetry]
name = "async-download-service"
version = "0.1.0"
description = "Microservice for downloading files"
authors = ["Nikita Isaev"]

[tool.poetry.dependencies]
python = "^3.8"

# Linting
black = "~20.8b1"
isort = "~4.3.21"
pylint = "~2.4.4"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
known_third_party = [ "celery", "alembic", "sqlalchemy", "httpx", "pytest", "posix_ipc", "sqlalchemy_utils", "starlette", "pydantic", "common", "gino_starlette", "fastapi",]
force_sort_within_sections = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"